EX-2810: Fix Description overflow in case of long words

--- a/modules/mobile-ui/sources/styles/style.sass
+++ b/modules/mobile-ui/sources/styles/style.sass
@@ -1780,6 +1780,7 @@ body
   box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.12)
   border-radius: 0.25rem
   width: 96%
+  word-break: break-word
   &.last-card
     #googleThisAnim
       h3
